@@ -4,5 +4,4 @@ a2,"Wood",-122.11400,38.11300,1.61307E-01,9.64504E-02,1.88133E-01,1.84156E-01,3.
 a5,"Steel",-122.00000,37.91000,6.29714E-01,2.15507E-01,9.46787E-02,4.12075E-02,1.88931E-02
 a4,"Concrete",-122.00000,38.00000,1.10618E-01,1.05850E-01,2.24651E-01,2.18194E-01,3.40688E-01
 a1,"Wood",-122.00000,38.11300,6.30138E-02,3.90968E-02,9.50851E-02,1.29994E-01,6.72810E-01
-a6,"Wood",-122.00000,38.22500,1.22812E-01,7.03559E-02,1.46202E-01,1.61624E-01,4.99005E-01
 a7,"Steel",-121.88600,38.11300,4.77537E-01,2.65506E-01,1.45288E-01,7.24332E-02,3.92354E-02
