@@ -4,5 +4,4 @@ a2,"Wood",-122.11400,38.11300,1.49106E-01,9.58338E-02,1.90566E-01,1.88337E-01,3.
 a5,"Steel",-122.00000,37.91000,8.24745E-01,1.08791E-01,4.28327E-02,1.77807E-02,5.85077E-03
 a4,"Concrete",-122.00000,38.00000,1.22048E-01,1.03281E-01,2.19360E-01,2.15531E-01,3.39779E-01
 a1,"Wood",-122.00000,38.11300,6.16480E-02,3.90217E-02,9.52355E-02,1.30384E-01,6.73711E-01
-a6,"Wood",-122.00000,38.22500,1.11384E-01,6.99280E-02,1.48271E-01,1.65293E-01,5.05124E-01
 a7,"Steel",-121.88600,38.11300,6.96578E-01,1.76730E-01,7.87160E-02,3.50479E-02,1.29280E-02
